# presidio

./: .devcontainer.json  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.golang.base  Dockerfile.golang.deps  Dockerfile.python.base  Dockerfile.python.deps  Gopkg.toml  LICENSE  Makefile  NOTICE  README.MD  README.md  SECURITY.md  SUPPORT.md  TEST_SCRIPTS_README.md  Untitled.ipynb  VERSION  alpine.Dockerfile  api.html  azure-pipelines-1.yml  azure-pipelines-ci.yml  azure-pipelines.yml  benchmark_presidio.py  build.sh  build_release.html  claude.md  (+51 more)
presidio/: README.md  pyproject.toml
presidio-analyzer/: .dockerignore  Dockerfile  Dockerfile.bak  Dockerfile.dev  Dockerfile.gliner-edge  Dockerfile.local  Dockerfile.local.conda  Dockerfile.scai-all  Dockerfile.stanza  Dockerfile.transformers  Dockerfile.transformers.dev  Dockerfile.windows  MANIFEST.in  OKERA_README  Pipenv_Readme.md  Pipfile  README.MD  README.md  app.py  benchmark_results.json  deploytoazure.json  dockerignore  gpu_benchmark.md  gpu_gliner_results.json  gpu_results.json  gpu_spacy_results.json  gpu_stanza_results.json  gpu_trans_results.json  install_dependencies.sh  install_gliner_models.py  install_nlp_models.py  install_ollama_model.py  logging.ini  profile_analyzer.py  pylintrc  pyproject.toml  request_logger.py  requirements-dev.txt  requirements-poetry.txt  requirements.txt  (+7 more)
presidio-analyzer/analyzer/: __init__.py  __main__.py  analysis_explanation.py  analyze_pb2.py  analyze_pb2_grpc.py  analyzer.py  analyzer_engine.py  anonymize_image_pb2_grpc.py  app_tracer.py  common_pb2.py  context_enhancer.py  entity_recognizer.py  local_recognizer.py  logger.py  matcher.py  nlp_artifacts.py  nlp_loader.py  pattern.py  pattern_recognizer.py  presidio-analyzer  recognizer_result.py  recognizers_store_pb2.py  recognizers_store_pb2_grpc.py  remote_recognizer.py  scan_pb2.py  scheduler_pb2_grpc.py  template_pb2.py
presidio-analyzer/build-scripts/: build.py
presidio-analyzer/conf/: analyzer.yaml  default.yaml  default_recognizers.yaml  spacy.yaml  spacy_llm.yaml  spacy_multilingual.yaml  stanza.yaml  stanza_multilingual.yaml  text_analytics_entity_categories.yaml  transformers.yaml
presidio-analyzer/custom/: setup_heartbeat.sh
presidio-analyzer/presidio-anonymizer/: Dockerfile  Dockerfile.dev  Dockerfile.windows  app.py
presidio-analyzer/presidio-venv/: pyvenv.cfg
presidio-analyzer/presidio_analyzer/: Gopkg.toml  Pipfile  __init__.py  __main__.py  analysis_explanation.py  analyzer_engine.py  analyzer_engine_provider.py  analyzer_loader.py  analyzer_mode.py  analyzer_request.py  analyzer_utils.py  app.py  app_tracer.py  batch_analyzer_engine.py  codeql_test.py  country_master.csv  datasink_pb2.py  dict_analyzer_result.py  entity_recognizer.py  error_response.py  improvable_pattern.py  improvable_pattern_recognizer.py  lm_recognizer.py  local_recognizer.py  ocr_pb2.py  ocr_pb2_grpc.py  pattern.py  pattern_recognizer.py  presidio-analyzer  presidio-analyzer.bat  presidio_logger.py  recognizer_registry.py  recognizer_registry_provider.py  recognizer_result.py  remote_recognizer.py  scheduler_pb2.py  text_analytics_entity_category.py
presidio-analyzer/profiler/: profile_analyzer.py
presidio-analyzer/scripts/: benchmark_modes.py  run_gliner_edge.sh
presidio-analyzer/tests/: README_LANGEXTRACT_TESTS.md  __init__.py  assertions.py  conftest.py  test_aba_routing_recognizer.py  test_ahds_recognizer.py  test_ahds_recognizer_credential_selection.py  test_all_fields.py  test_amazon_s3_secret_key_recognizer.py  test_analyze_perf.py  test_analyzer.py  test_analyzer_configuration.py  test_analyzer_engine.py  test_analyzer_engine_provider.py  test_analyzer_engine_provider_target_entities.py  test_analyzer_engine_provider_warnings.py  test_analyzer_mode.py  test_analyzer_request.py  test_analyzer_utils.py  test_assertions.py  test_at_passport_recognizer.py  test_au_abn_recognizer.py  test_au_acn_recognizer.py  test_au_bank_account_recognizer.py  test_au_medicare_recognizer.py  test_au_tfn_recognizer.py  test_azure_ai_language_recognizer.py  test_azure_auth_helper.py  test_azure_openai_langextract_recognizer.py  test_azure_openai_langextract_recognizer_integration.py  test_azure_openai_recognizer.py  test_base_chunker.py  test_basic_langextract_recognizer.py  test_batch_analyze.py  test_batch_analyzer_engine.py  test_be_passport_recognizer.py  test_bu_passport_recognizer.py  test_ca_sin_recognizer.py  test_certificate_number_recognizer.py  test_cfi_recognizer.py  (+216 more)
presidio-anonymizer/: .dockerignore  Dockerfile  Dockerfile.bak  Dockerfile.dev  Dockerfile.windows  Pipfile  README.MD  README.md  VERSION  api.py  app.py  azuredeploy.json  deploytoazure.json  entrypoint.sh  fastapi_app.py  logging.ini  pyproject.toml  requirements-poetry.txt  setup.cfg  setup.py
presidio-anonymizer/api-docs/: anonymize.yml  anonymizers.yml  health.yml  template.yml
presidio-anonymizer/examples/: ahds_surrogate_example.py  pseudonymize_example.py
presidio-anonymizer/presidio_anonymizer/: __init__.py  anonymize_engine.py  anonymizer.py  anonymizer_decryptor.py  anonymizer_engine.py  batch_anonymizer_engine.py  batch_deanonymize_engine.py  deanonymize_engine.py  decrypt_engine.py  decryptor_engine.py  engine.py  presidio_anonymizer.py  setup.py  text_engine.py
presidio-anonymizer/tests/: conftest.py  mock_operators.py  test_ahds_surrogate.py  test_analyzer_result.py  (+38 more)
presidio-cli/: .presidiocli  Pipfile  README.md  presidio.megalinter.descriptor.yml  pyproject.toml  setup.cfg  setup.py
presidio-image-redactor/: .dockerignore  .mise.local.toml  Dockerfile  Dockerfile.dev  Evaluation_Approach.md  Pipfile  README.MD  README.md  VERSION  app.py  deploytoazure.json  dockerignore  entrypoint.sh  pyproject.toml  qr_recognizer.py  requirements.txt  setup.cfg  setup.py
presidio-structured/: Pipfile  README.md  VERSION  __init__.py  logging.ini  pyproject.toml  setup.cfg  setup.py
(+2481 files in other folders)
