[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
name = "presidio_analyzer"
version = "2.2.358"
description = "Presidio Analyzer package"
authors = [{name = "Presidio", email = "presidio@microsoft.com"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["presidio_analyzer"]
urls = {Homepage = "https://github.com/Microsoft/presidio"}
readme = "README.md"
include = ["conf/*",]

requires-python = ">=3.9,<4.0"
dependencies = [
    "spacy (>=3.4.4, <4.0.0, !=3.7.0)",
    "regex",
    "tldextract",
    "pyyaml",
    "phonenumbers (>=8.12,<9.0.0)"
]

[project.optional-dependencies]
server = [
    "flask (>=1.1)",
    "gunicorn"
]
transformers = [
    "transformers",
    "huggingface_hub",
    "spacy_huggingface_pipelines"]
stanza = [
    "stanza (>=1.10.1,<2.0.0)",
]
azure-ai-language = [
    "azure-ai-textanalytics",
    "azure-core",
]
gliner = [
    "transformers",
    "huggingface_hub",
    "gliner (>=0.2.13,<1.0.0) ; python_version >= '3.10'",
    "onnxruntime (>=1.19) ; python_version >= '3.10'"
]

[tool.poetry.group.dev.dependencies]
pip = "*"
ruff = "*"
pytest = "*"
pytest-mock = "*"
python-dotenv = "*"
pre_commit = "*"
