[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "presidio_anonymizer"
description = "Presidio Anonymizer package - replaces analyzed text with desired values."
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">= 3.5"
keywords = ["presidio_anonymizer"]
urls = {Homepage = "https://github.com/Microsoft/presidio"}
dependencies = ["pycryptodome>=3.10.1"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = ["pytest", "ruff"]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
