[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
name = "presidio_anonymizer"
version = "2.2.360"
description = "Presidio Anonymizer package - replaces analyzed text with desired values."
authors = [{name = "Presidio", email = "presidio@microsoft.com"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["presidio_anonymizer"]
urls = {Homepage = "https://github.com/Microsoft/presidio"}
readme = "README.md"

requires-python = ">=3.9,<4.0"
dependencies = [
    "cryptography (<44.1)"
]

[project.optional-dependencies]
server = [
    "flask (>=1.1)",
    "gunicorn"
]
ahds = [
    "azure-identity (>=1.23.0,<2.0.0)",
    "azure-health-deidentification (>=1.1.0b1,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
pip = "*"
ruff = "*"
pytest = "*"
pytest-mock = "*"
python-dotenv = "*"
pre_commit = "*"
