[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "presidio-cli"
version = "0.0.8"
description = "CLI tool that analyzes text for PII Entities using Presidio Analyzer."
authors = ["Presidio <presidio@microsoft.com>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["pii", "checker", "presidio_cli"]
urls = {Homepage = "https://github.com/microsoft/presidio"}
readme = "README.md"
include = ["conf/*", ".presidiocli"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
presidio-analyzer = ">= 2.2"
pyyaml = "*"
pathspec = "*"

[tool.poetry.scripts]
presidio = "presidio_cli.cli:run"

[tool.poetry.group.dev.dependencies]
pip = "*"
ruff = "*"
pytest = "*"
pytest-mock = "*"
python-dotenv = "*"
pre_commit = "*"
