[bdist_wheel]
universal = 1

[flake8]
import-order-style = pep8
application-import-names = presidio_cli
ignore = E203,W503
max-line-length = 120

[build_sphinx]
all-files = 1
source-dir = docs
build-dir = docs/_build
warning-is-error = 1

[metadata]
keywords =
  pii
  checker

url = https://github.com/microsoft/presidio


[options]
packages = find:

python_requires = >=3.7

include_package_data = True
install_requires =
  presidio-analyzer >= 2.2
  pyyaml
  pathspec

test_suite = tests

[options.packages.find]
exclude =
  tests
  tests.*

[options.package_data]
presidio_cli = conf/*.yaml

[options.entry_points]
console_scripts =
  presidio = presidio_cli.cli:run

[coverage:run]
relative_files = True
omit =
    */__main__.py
