[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "presidio-image-redactor"
version = "0.0.53"
description = "Presidio image redactor package"
authors = ["Presidio <presidio@microsoft.com>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["presidio_image_redactor"]
urls = {Homepage = "https://github.com/Microsoft/presidio"}
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pillow = ">=9.0"
pytesseract = ">=0.3.7,<0.4"
presidio-analyzer = ">=1.9.0"
matplotlib = ">=3.6"
pydicom = ">=2.3.0"
pypng = ">=0.20220715.0"
azure-ai-formrecognizer = ">=3.3.0,<4.0.0"
opencv-python = ">=4.0.0,<5.0.0"
python-gdcm = ">=3.0.24.1"
#numpy = ">=1.21.0"
flask = { version = ">=1.1", optional = true }

[tool.poetry.extras]
server = ["flask"]

[tool.poetry.group.dev.dependencies]
pip = "*"
ruff = "*"
pytest = "*"
pytest-mock = "*"
python-dotenv = "*"
pre_commit = "*"
