[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "presidio_structured"
version = "0.0.2-alpha"
description = "Presidio structured package - analyzes and anonymizes structured and semi-structured data."
authors = ["Presidio <presidio@microsoft.com>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["presidio_structured"]
urls = {Homepage = "https://github.com/microsoft/presidio"}
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
presidio-analyzer = ">=2.2"
presidio-anonymizer = ">=2.2"
pandas = ">=1.5.2"

[tool.poetry.group.dev.dependencies]
pip = "*"
ruff = "*"
pytest = "*"
pytest-mock = "*"
python-dotenv = "*"
pre_commit = "*"
