[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
name = "presidio_structured"
version = "0.0.6"
description = "Presidio structured package - analyzes and anonymizes structured and semi-structured data."
authors = [{name = "Presidio", email = "presidio@microsoft.com"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["presidio_structured"]
urls = {Homepage = "https://github.com/microsoft/presidio"}
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "presidio-analyzer (>=2.2)",
    "presidio-anonymizer (>=2.2)",
    "pandas (>=1.5.2)",
]

[tool.poetry.group.dev.dependencies]
pip = "*"
ruff = "*"
pytest = "*"
pytest-mock = "*"
python-dotenv = "*"
pre_commit = "*"
