[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
name = "presidio"
version = "2.2.361"
description = "Presidio - Data Protection and De-identification SDK"
authors = [{name = "Presidio", email = "presidio@microsoft.com"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["presidio"]
urls = {Homepage = "https://github.com/Microsoft/presidio"}
readme = "README.md"

requires-python = ">=3.10,<3.14"
dependencies = [
    "presidio-analyzer (>=2.2)",
    "presidio-anonymizer (>=2.2)",
]

[tool.poetry.group.dev.dependencies]
pip = "*"
ruff = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
python-dotenv = "*"
pre_commit = "*"
diff-cover = "*"

[tool.coverage.run]
relative_files = true
source = ["."]
