[tool.poetry]
name = "presidio-evaluation-backend"
version = "0.1.0"
description = "Backend API for Presidio Evaluation Flow"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.32.0", extras = ["standard"] }
pydantic = ">=2.0.0"
python-multipart = ">=0.0.9"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
langextract = ">=0.1.0"
openai = ">=1.0.0"
presidio-analyzer = { path = "../../../presidio-analyzer", develop = true }
azure-identity = ">=1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
